Rename 'ktn' distro, machine overrides and config in all files and paths

--- a/layers/meta-ked-imx/conf/local.conf.sample
+++ b/layers/meta-ked-imx/conf/local.conf.sample
@@ -7,9 +7,9 @@ include sourcecode-version.conf
 # ######### DISTRO ############################
 # =============================================
 # use our distro configuration from
-# layers/meta-ked/conf/distro/ktn.conf
+# layers/meta-ked/conf/distro/ked.conf
 
-DISTRO = "ktn"
+DISTRO = "ked"
 
 # =============================================
 # ######### MACHINE ###########################
