--- a/layers/meta-ked/conf/distro/ked.conf
+++ b/layers/meta-ked/conf/distro/ked.conf
@@ -1,18 +1,18 @@
-require conf/distro/include/ktn-base.inc
+require conf/distro/include/ked-base.inc
 
-DISTRO = "ktn"
+DISTRO = "ked"
 DISTRO_NAME = "Kontron Electronics Reference Distro"
 DISTRO_VERSION = "${@ '0.0.0-dev' if not d.getVar('SEMVER') else d.getVar('SEMVER') }"
 BASE_SERIES ?= "undefined"
 OVERRIDES =. "${BASE_SERIES}:"
 DISTRO_CODENAME_SUFFIX ?= "${BASE_SERIES}"
-DISTRO_CODENAME = "ktn-${DISTRO_CODENAME_SUFFIX}"
+DISTRO_CODENAME = "ked-${DISTRO_CODENAME_SUFFIX}"
 
-SDK_VENDOR = "-ktnsdk"
+SDK_VENDOR = "-kedsdk"
 SDKPATHINSTALL = "/opt/kontron/${MACHINE}/${SDK_VERSION}"
 
 MAINTAINER = "Kontron Electronics GmbH <support@kontron-electronics.de>"
-TARGET_VENDOR = "-ktn"
+TARGET_VENDOR = "-ked"
 
 # =========================================================================
 # misc settings
