meta-ked-imx: u-boot-ktn: Generalize boot scripts and use load command
Use generic names for the boot scripts for booting from a single
partition and for doing A/B boots from two separate partitions.

Use the generic 'load' command instead of specific filesystem
commands.

Also sync the environment for i.MX6UL/ULL with the one for i.MX8MM.

--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
@@ -1,8 +1,7 @@
 active_part_file=sys_active
 active_part=a
-boot_prefixes=/ /boot/
 bootargs_base=rootwait
-bootcfg=imx6ul-kontron-bl.dtb
+bootcfg=conf-imx6ul-kontron-bl.dtb
 bootcmd=run vendor_bootcmd;
 bootubipart=spi-nand0
 bootubivol=boot
@@ -18,8 +17,8 @@ scriptaddr=0x80100000
 serverip=192.168.1.10
 upgrade_available=0
 vendor_boot_targets=mmc0 ubifs mmc1
-vendor_bootcmd_mmc0= setenv devnum 0;setenv devpart 1;run vendor_mmc0_boot
-vendor_bootcmd_mmc1= setenv devnum 1;setenv devpart 1;run vendor_mmc1_boot
+vendor_bootcmd_mmc0= setenv devnum 0;setenv devpart 1;run vendor_boot
+vendor_bootcmd_mmc1= setenv devnum 1;setenv devpart 1;run vendor_ab_boot
 
 altbootcmd=
 	setenv fallback_active 1;
@@ -36,9 +35,9 @@ vendor_bootcmd_net=
 	run netargs;
 	setenv bootargs ${bootargs} ${bootargs_base};
 	tftp ${loadaddr} ${image_base};
-	bootm ${loadaddr}#conf-${bootcfg};
+	run vendor_bootm;
 
-vendor_bootcmd_ubifs=
+vendor_ab_boot=
 	if ubi part ubi || ubi part UBI; then
 		ubifsmount ubi0:boot;
 		if ubifsload $loadaddr ${active_part_file} 2; then
@@ -55,7 +54,7 @@ vendor_bootcmd_ubifs=
 				wdt dev watchdog@20bc000;
 				wdt start 15000;
 			fi;
-			bootm ${loadaddr}#conf-${bootcfg};
+			run vendor_bootm;
 		else
 			echo ------------------------ ;
 			echo $image not found.        ;
@@ -65,16 +64,17 @@ vendor_bootcmd_ubifs=
 		fi;
 	fi;
 
-vendor_mmc0_boot=
-	setenv bootargs root=/dev/mmcblk0p2 ${bootargs_base};
-	if fatload mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
-		bootm ${loadaddr}#conf-${bootcfg};
+vendor_boot=
+	setenv bootargs root=/dev/mmcblk${devnum}p2 ${bootargs_base};
+	if load mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
+		run vendor_bootm;
 	fi;
 
-vendor_mmc1_boot=
-	setenv bootargs root=/dev/mmcblk1p2 ${bootargs_base};
-	if fatload mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
-		bootm ${loadaddr}#conf-${bootcfg};
+vendor_bootm=
+	if test -n "${bootcfg}"; then
+		bootm ${loadaddr}#${bootcfg};
+	else
+		bootm ${loadaddr};
 	fi;
 
 vendor_set_ab_bootargs=
