--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/sl-mx8mm.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/sl-mx8mm.env
@@ -18,20 +18,13 @@ scriptaddr=0x40000000
 serverip=192.168.1.10
 upgrade_available=0
 vendor_boot_targets=mmc1 mmc0
-vendor_bootcmd_mmc0=devnum=0; devpart=1; run vendor_emmc_ab_boot
-vendor_bootcmd_mmc1=devnum=1; devpart=1; run vendor_mmc_boot
+vendor_bootcmd_mmc0=devnum=0; devpart=1; run vendor_ab_boot
+vendor_bootcmd_mmc1=devnum=1; devpart=1; run vendor_boot
 
 altbootcmd=
 	setenv fallback_active 1;
 	setenv bootargs_base ${bootargs_base} fallback;
 	run vendor_bootcmd;
-
-vendor_bootm=
-       if test -n "${bootcfg}"; then
-               bootm ${loadaddr}#${bootcfg};
-       else
-               bootm ${loadaddr};
-       fi;
 
 vendor_bootcmd=
 	if test "$bootcfg" = 'auto'; then
@@ -47,6 +40,13 @@ vendor_bootcmd_net=
 	setenv bootargs ${bootargs} ${bootargs_base};
 	tftp ${loadaddr} ${image_base};
 	run vendor_bootm;
+
+vendor_bootm=
+	if test -n "${bootcfg}"; then
+		bootm ${loadaddr}#${bootcfg};
+	else
+		bootm ${loadaddr};
+	fi;
 
 vendor_detect_config=
 	gpio clear ${touch_rst_gpio};
@@ -71,8 +71,8 @@ vendor_detect_config=
 		setenv bootcfg ${bootcfg};
 	fi;
 
-vendor_emmc_ab_boot=
-	if ext4load mmc ${devnum}:${devpart} ${loadaddr} ${active_part_file}; then
+vendor_ab_boot=
+	if load mmc ${devnum}:${devpart} ${loadaddr} ${active_part_file}; then
 		run vendor_set_ab_bootargs;
 	else
 		echo ------------------------ ;
@@ -81,7 +81,7 @@ vendor_emmc_ab_boot=
 		echo ------------------------ ;
 		reset;
 	fi;
-	if ext4load mmc ${devnum}:${devpart} ${loadaddr} ${image}; then
+	if load mmc ${devnum}:${devpart} ${loadaddr} ${image}; then
 		if test ${upgrade_available} = 1; then
 			wdt dev watchdog@30280000;
 			wdt start 15000;
@@ -95,9 +95,9 @@ vendor_emmc_ab_boot=
 		reset;
 	fi;
 
-vendor_mmc_boot=
-	setenv bootargs root=/dev/mmcblk1p2 ${bootargs_base};
-	if fatload mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
+vendor_boot=
+	setenv bootargs root=/dev/mmcblk${devnum}p2 ${bootargs_base};
+	if load mmc ${devnum}:${devpart} ${loadaddr} ${image_base}; then
 		run vendor_bootm;
 	fi;
 
