--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 include:
-  - '/ci/build.yml'
+  - '/ci/inc/build.yml'
   - '/ci/container-build.yml'
   - project: 'sw/ked/docs/mkdocs-ked'
     ref: main
