--- a/ci/container-build.yml
+++ b/ci/container-build.yml
@@ -35,3 +35,17 @@
     - changes:
         - $CONTAINERFILE
         - ci/container-build.yml
+
+# Build Container Image
+.container-vars: &container-vars
+  variables:
+    CONTAINERFILE: Containerfile
+    TAG: kas-ked
+
+container:build:
+  extends: .build-container
+  <<: *container-vars
+
+container:build-deploy:
+  extends: .build-deploy-container
+  <<: *container-vars
