--- a/ci/inc/build.yml
+++ b/ci/inc/build.yml
@@ -80,7 +80,7 @@ workflow:
       when: never
     - if: '$CI_COMMIT_TAG =~ /^rel_.*/'
       when: never
-    - when: always
+    - when: on_success
   script:
     - !reference [.scripts, ci-prep]
     - !reference [.scripts, gitversion]
