meta-ked: ked.conf: Add version string to image name

--- a/layers/meta-ked/conf/distro/ked.conf
+++ b/layers/meta-ked/conf/distro/ked.conf
@@ -8,6 +8,8 @@ OVERRIDES =. "${BASE_SERIES}:"
 DISTRO_CODENAME_SUFFIX ?= "${BASE_SERIES}"
 DISTRO_CODENAME = "ked-${DISTRO_CODENAME_SUFFIX}"
 
+IMAGE_VERSION_SUFFIX ?= "-${@ '${DATETIME}' if not d.getVar('SEMVER') else d.getVar('SEMVER') }"
+
 SDK_VENDOR = "-kedsdk"
 SDKPATHINSTALL = "/opt/kontron/${MACHINE}/${SDK_VERSION}"
 
