--- a/ci/inc/deploy.yml
+++ b/ci/inc/deploy.yml
@@ -1,5 +1,5 @@
-variables:
-  PACKAGE_REGISTRY_URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic
+include:
+  - '/ci/inc/common.yml'
 
 .deploy-packages:
   tags:
@@ -7,7 +7,7 @@ variables:
   stage: deploy
   image: ubuntu:22.04
   rules:
-    - if: '$BUILD_DISABLED'
+    - if: $BUILD_DISABLED == "true"
       when: never
     - if: '$CI_COMMIT_TAG !~ $REL_TAG_PATTERN'
       when: never
