--- a/ci/inc/release.yml
+++ b/ci/inc/release.yml
@@ -1,10 +1,13 @@
+include:
+  - '/ci/inc/common.yml'
+
 .create-release:
   tags:
     - server
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
-    - if: '$BUILD_DISABLED'
+    - if: $BUILD_DISABLED == "true"
       when: never
     - if: '$CI_COMMIT_TAG !~ $REL_TAG_PATTERN'
       when: never
