meta-ked-imx: Use fitImageA/B instead of active/inactive
This is supposed to fix a problem where you can end up with two
non-working images.

This can be triggered by the following actions:

  * Starting with rootfs A and fitImage_active
  * Doing an update via swupdate using a corrupted kernel image
  * fitImage_active gets renamed to fitImage_inactive.
  * The corrupted kernel now in fitImage_active fails to boot
  * A fallback to rootfs A occurs: rootfs A is started together
    with the working fitImage_inactive
  * On the next update via swupdate the corrupted fitImage_active is
    renamed to fitImage_inactive ending up with two corrupted kernel
    images
  * The now corrupted fitImage_inactive is copied to fitImage_active
    and the boot is bricked

To remedy this flaw, simply swap the fitImage in sync with the rootfs.
Instead of the active/inactive image we now use A/B for the kernel image
and the currently used image is selected by the sys_active file.

--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
@@ -80,7 +80,6 @@ vendor_bootm=
 vendor_set_ab_bootargs=
 	if test $fallback_active = 0; then
 		echo Normal boot to active system;
-		setenv image ${image_base}_active;
 		if itest.b *${loadaddr} == 41; then
 			setenv active_part a;
 		else
@@ -88,7 +87,6 @@ vendor_set_ab_bootargs=
 		fi;
 	else
 		echo Fallback boot to inactive system;
-		setenv image ${image_base}_inactive;
 		if itest.w *${loadaddr} == 0x4242 || itest.w *${loadaddr} == 0x4241; then
 			setenv active_part b;
 		elif itest.w *${loadaddr} == 0x4141 || itest.w *${loadaddr} == 0x4142; then
@@ -96,9 +94,11 @@ vendor_set_ab_bootargs=
 		fi;
 	fi;
 	if test $active_part = a; then
+		setenv image ${image_base}_A;
 		setenv bootargs ubi.mtd=0 rootfstype=ubifs root=ubi0:root_A ${bootargs_base};
 		echo Using rootfs partition A: ubi0:root_A;
 	elif test $active_part = b; then
+		setenv image ${image_base}_B;
 		setenv bootargs ubi.mtd=0 rootfstype=ubifs root=ubi0:root_B ${bootargs_base};
 		echo Using rootfs partition B: ubi0:root_B;
 	fi;
