--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/sl-mx8mm.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/sl-mx8mm.env
@@ -104,7 +104,6 @@ vendor_boot=
 vendor_set_ab_bootargs=
 	if test $fallback_active = 0; then
 		echo Normal boot to active system;
-		setenv image ${image_base}_active;
 		if itest.b *${loadaddr} == 41; then
 			setenv active_part a;
 		else
@@ -112,7 +111,6 @@ vendor_set_ab_bootargs=
 		fi;
 	else
 		echo Fallback boot to inactive system;
-		setenv image ${image_base}_inactive;
 		if itest.w *${loadaddr} == 0x4242 || itest.w *${loadaddr} == 0x4241; then
 			setenv active_part b;
 		elif itest.w *${loadaddr} == 0x4141 || itest.w *${loadaddr} == 0x4142; then
@@ -120,9 +118,11 @@ vendor_set_ab_bootargs=
 		fi;
 	fi;
 	if test $active_part = a; then
+		setenv image ${image_base}_A;
 		setenv bootargs root=/dev/mmcblk${devnum}p2 ${bootargs_base};
 		echo Using rootfs partition A: /dev/mmcblk${devnum}p2;
 	elif test $active_part = b; then
+		setenv image ${image_base}_B;
 		setenv bootargs root=/dev/mmcblk${devnum}p3 ${bootargs_base};
 		echo Using rootfs partition B: /dev/mmcblk${devnum}p3;
 	fi;
