meta-ked: Disable VT in distro

--- a/layers/meta-ked/conf/distro/ked.conf
+++ b/layers/meta-ked/conf/distro/ked.conf
@@ -49,6 +49,7 @@ PREFERRED_VERSION_libgpiod ?= "1.6.4"
 # =========================================================================
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = "initscripts"
+USE_VT = "0"
 
 # =========================================================================
 # distro features
