meta-ked-imx: u-boot-imx: Add console config
Adds console kernel command line settings for imx6 devices. The
dt chosen stdout-path is currently ignored for any reason

--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx6ul/sl-mx6ul.env
@@ -1,6 +1,6 @@
 active_part_file=sys_active
 active_part=a
-bootargs_base=rootwait
+bootargs_base=rootwait console=ttymxc3,115200 earlycon
 bootcfg=conf-imx6ull-kontron-dl.dtb
 bootcmd=run vendor_bootcmd;
 bootubipart=spi-nand0
