--- a/layers/meta-ked/conf/distro/ked.conf
+++ b/layers/meta-ked/conf/distro/ked.conf
@@ -43,6 +43,9 @@ INHERIT += "image-buildinfo"
 # default/preferred providers/versions
 # =========================================================================
 PREFERRED_VERSION_libgpiod ?= "1.6.4"
+PREFERRED_VERSION_util-linux = "2.38.1"
+PREFERRED_VERSION_util-linux-libuuid = "2.38.1"
+PREFERRED_VERSION_nativesdk-util-linux = "2.38.1"
 
 # =========================================================================
 # init system
