--- a/ci/inc/build.yml
+++ b/ci/inc/build.yml
@@ -5,6 +5,9 @@ variables:
   BUILD_IMAGE: "registry.kontron-electronics.de/sw/ked/meta-ked-bsp/kas-ktn:latest"
   BUILD_SDK_TASK: populate_sdk
   GIT_DEPTH: 0 # in order to use GitVersion we need the full history available
+  EXTRA_TARGETS:
+    value: ""
+    description: "Specify extra bitbake targets in a space-separated list."
 
 workflow:
   rules:
@@ -63,6 +66,7 @@ workflow:
   #
   kas:
     - mkdir -p build/tmp/deploy/bbenv
+    - TARGETS="$TARGETS $EXTRA_TARGETS"
     - export KAS_TARGET="$TARGETS"
     - kas build $KAS_CONFIG:kas/dev/shared-cache.yml
     - |
