meta-ked-imx: u-boot-ktn: Use YAML for fw_env.config and specify all possible devices

--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/fw_env.config
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mm/fw_env.config
@@ -1,13 +1,32 @@
-# Configuration file for fw_(printenv/setenv) utility.
-# Up to two entries are valid, in this case the redundant
-# environment sector is assumed present.
-# Notice, that the "Number of sectors" is not required on NOR and SPI-dataflash.
-# Futhermore, if the Flash sector size is omitted, this value is assumed to
-# be the same as the Environment size, which is valid for NOR and SPI-dataflash
-# Device offset must be prefixed with 0x to be parsed as a hexadecimal value.
+spi-nor:
+  size : 0x10000
+  lockfile : /var/lock/fw_printenv.lock
+  devices:
+    - path : /dev/mtd1
+      offset : 0x0
+      sectorsize : 0x4000
+    - path : /dev/mtd2
+      offset : 0x0
+      sectorsize : 0x4000
 
-# NOR example
-# MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
+sd-card:
+  size : 0x10000
+  lockfile : /var/lock/fw_printenv.lock
+  devices:
+    - path : /dev/mmcblk1
+      offset : 0x1E0000
+      sectorsize : 0x4000
+    - path : /dev/mmcblk1
+      offset : 0x1F0000
+      sectorsize : 0x4000
 
-/dev/mtd1	0x0000		0x10000	0x4000
-/dev/mtd2 	0x0000		0x10000	0x4000
+emmc:
+  size : 0x10000
+  lockfile : /var/lock/fw_printenv.lock
+  devices:
+    - path : /dev/mmcblk0boot0
+      offset : -0x20000
+      sectorsize : 0x4000
+    - path : /dev/mmcblk0boot0
+      offset : -0x10000
+      sectorsize : 0x4000
