docs: mkdocs.yml: Fix site_name

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Kontron Electronics Docs - Meta Kontron
+site_name: Kontron Electronics Docs - Meta KED BSP
 
 repo_url: 'https://git.kontron-electronics.de/sw/ked/meta-ked-bsp'
 docs_dir: src
