--- a/ci/inc/common.yml
+++ b/ci/inc/common.yml
@@ -1,3 +1,14 @@
+workflow:
+  rules:
+    #
+    # Do not run branch pipelines when there is an open MR for this branch.
+    # This prevents duplicate piplines (MR & push) for those cases.
+    # See: https://docs.gitlab.com/ee/ci/yaml/workflow.html#switch-between-branch-pipelines-and-merge-request-pipelines
+    #
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS && $CI_PIPELINE_SOURCE == "push"
+      when: never
+    - when: always
+
 variables:
   PACKAGE_REGISTRY_URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic
   REL_TAG_PATTERN: /^\d+\.\d+(?:\.\d+)?.*/
