CI: Move function for bitbake env parsing to common include file

--- a/ci/inc/common.yml
+++ b/ci/inc/common.yml
@@ -9,6 +9,13 @@ workflow:
       when: never
     - when: always
 
+.parse-bbenv:
+  script:
+    - |
+      parse_bitbake_env () {
+        echo $(cat "$BASE_DIR/deploy/$BUILD_NAME/bbenv/$1.env" | grep -oP '(?<=^'"$2"'\=").*(?=")')
+      }
+
 variables:
   PACKAGE_REGISTRY_URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic
   REL_TAG_PATTERN: /^\d+\.\d+(?:\.\d+)?.*/
