--- a/ci/inc/package.yml
+++ b/ci/inc/package.yml
@@ -19,16 +19,13 @@ include:
     ARCHIVE_FILENAME: ${PRODUCT}_${NAME}_${CI_COMMIT_REF_SLUG}
     ARCHIVE: $ARCHIVE_FILENAME.zip
   script:
+    - !reference [.parse-bbenv, script]
     - |
       apt -y update
       apt -y install zip
       BASE_DIR=$(pwd)
       TMPDIR="/tmp/$NAME/"
       PACKAGE_DIR="$BASE_DIR/package/"
-
-      parse_bitbake_env () {
-        echo $(cat "$BASE_DIR/deploy/$BUILD_NAME/bbenv/$1.env" | grep -oP '(?<=^'"$2"'\=").*(?=")')
-      }
 
       if ! test -d "$BASE_DIR/deploy/$BUILD_NAME"; then
         echo "Failed to find build directory $BASE_DIR/deploy/$BUILD_NAME"
