docs: mkdocs.yml: Remove -dev suffix and WIP status for v6.1.0 release notes

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -32,5 +32,5 @@ nav:
  - Build: build.md
  - Customization: customization.md
  - Release Information:
-     - v6.1.0-dev: release/6.1.0.md
+     - v6.1.0: release/6.1.0.md
      - v6.0.0: release/6.0.0.md
