docs: mkdocs.yml: Add nav entry for index page

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -28,6 +28,7 @@ markdown_extensions:
  - pymdownx.superfences
 
 nav:
+ - Overview: index.md
  - Prerequisites: prerequisites.md
  - Build: build.md
  - Customization: customization.md
