--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -33,5 +33,6 @@ nav:
  - Build: build.md
  - Customization: customization.md
  - Release Information:
+     - Dev: release/dev.md
      - v6.1.0: release/6.1.0.md
      - v6.0.0: release/6.0.0.md
