meta-ked/meta-ked-imx: Make sure libubootenv is the default provider for u-boot-fw-utils
This should be the default for all platforms.

--- a/layers/meta-ked/conf/distro/ked.conf
+++ b/layers/meta-ked/conf/distro/ked.conf
@@ -46,6 +46,7 @@ PREFERRED_VERSION_libgpiod ?= "1.6.4"
 PREFERRED_VERSION_util-linux = "2.38.1"
 PREFERRED_VERSION_util-linux-libuuid = "2.38.1"
 PREFERRED_VERSION_nativesdk-util-linux = "2.38.1"
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "libubootenv-bin"
 
 # =========================================================================
 # init system
