meta-ked: layer.conf: Remove hard dependency on meta-openembedded layer
This layer is usable without meta-openembedded. Remove the hard
dependency.

--- a/layers/meta-ked/conf/layer.conf
+++ b/layers/meta-ked/conf/layer.conf
@@ -42,4 +42,4 @@ EXCEET_GIT_PWD ?= "${KED_GIT_PWD}"
 
 LAYERVERSION_ked = "1"
 LAYERSERIES_COMPAT_ked = "dunfell kirkstone"
-LAYERDEPENDS_ked = "yocto openembedded-layer"
+LAYERDEPENDS_ked = "yocto"
