meta-ktn-imx: Add imx6ul dl variant

--- a/layers/meta-ked-imx/conf/machine/kontron-mx6ul.conf
+++ b/layers/meta-ked-imx/conf/machine/kontron-mx6ul.conf
@@ -13,6 +13,7 @@ KERNEL_DEVICETREE = " \
 	imx6ull-kontron-dl.dtb \
 	imx6ull-kontron-bl.dtb \
 	imx6ul-kontron-bl.dtb \
+	imx6ul-kontron-dl.dtb \
 "
 
 UBOOT_CONFIG[kontron-mx6ul] = "kontron-sl-mx6ul_defconfig"
