meta-ked-imx: u-boot-ktn: Fix bootcmd for i.MX8MP
Running fastboot as default doesn't make sense and is confusing for
the user as the boot just stops without any messages. Try to boot
from the default flash targets by default instead.

--- a/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mp/osm-s-mx8mp.env
+++ b/layers/meta-ked-imx/recipes-bsp/u-boot/u-boot-ktn/ked-mx8mp/osm-s-mx8mp.env
@@ -2,7 +2,7 @@ active_part_file=sys_active
 active_part=a
 bootargs_base=rootwait
 bootcfg=auto
-bootcmd=fastboot usb 0;
+bootcmd=run vendor_bootcmd;
 extension_board=0
 fallback_active=0
 fdt_addr_r=0x48000000
