--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
  - Build: build.md
  - Customization: customization.md
  - Release Information:
+     - main (WIP): release/main.md
      - v6.1.1: release/6.1.1.md
      - v6.1.0: release/6.1.0.md
      - v6.0.0: release/6.0.0.md
